python/testData/inspections/RemoveUnsupportedPrefixFromGluedStringNodesInParenthesis.py
s = (<error descr="Python version 3.4 does not support a 'F' prefix">f<caret></error>"string \n"
    <error descr="Python version 3.4 does not support a 'F' prefix">f</error>"next line"
)